# generate_qr_code

./: README.md  main.py  pyproject.toml
