[tool.poetry]
name = "qr_code_gen"
version = "0.1.0"
description = ""
authors = ["Ahmed ElSheikh <ahmedhelsheikh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.3.0"
isort = "^5.10.1"
qrcode = "^7.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
